* gc.c (vm_malloc_increase): check GVL before gc_rest_sweep().   vm_malloc_increase() can be called without GVL.   However, gc_rest_sweep() assumes acquiring GVL.   To avoid this problem, check GVL before gc_rest_sweep().   [Bug #9090]   This workaround introduces possibility to set malloc_limit as   wrong value (*1). However, this may be rare case. So I commit it.   *1: Without rest_sweep() here, gc_rest_sweep() can decrease       malloc_increase due to ruby_sized_xfree().

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@43574 b2dd03c8-39d4-4d8f-98ff-823fe69b080e